examples/test/testpolicy12178.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12178
  namespace: namespace19
spec:
  podSelector:
    matchLabels:
      key29: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value26
          key28: value29
          key39: value27
      podSelector:
        matchLabels:
          key33: value10
